--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -135,6 +135,9 @@
     <ClCompile Include="engine\Tool\Camera.cpp">
       <Filter>engine\Tool</Filter>
     </ClCompile>
+    <ClCompile Include="SrvManager.cpp">
+      <Filter>ソース ファイル</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="resources\shaders\Object3d\Object3d.PS.hlsl">
@@ -228,6 +231,9 @@
     </ClInclude>
     <ClInclude Include="engine\Tool\Camera.h">
       <Filter>engine\Tool</Filter>
+    </ClInclude>
+    <ClInclude Include="SrvManager.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
