--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -78,7 +78,7 @@
     <ClCompile Include="engine\audio\Audio.cpp">
       <Filter>engine\Audio</Filter>
     </ClCompile>
-    <ClCompile Include="engine\math\MassFunction.cpp">
+    <ClCompile Include="engine\math\MathFunction.cpp">
       <Filter>engine\math</Filter>
     </ClCompile>
     <ClCompile Include="engine\input\Input.cpp">
@@ -144,7 +144,7 @@
     <ClCompile Include="engine\math\DrawFunction.cpp">
       <Filter>engine\math</Filter>
     </ClCompile>
-    <ClCompile Include="PatricleEmitter.cpp">
+    <ClCompile Include="ParicleEmitter.cpp">
       <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
@@ -190,7 +190,7 @@
     <ClInclude Include="engine\audio\Audio.h">
       <Filter>engine\Audio</Filter>
     </ClInclude>
-    <ClInclude Include="engine\math\MassFunction.h">
+    <ClInclude Include="engine\math\MathFunction.h">
       <Filter>engine\math</Filter>
     </ClInclude>
     <ClInclude Include="engine\2d\Vector4.h">
@@ -256,7 +256,7 @@
     <ClInclude Include="engine\math\DrawFunction.h">
       <Filter>engine\math</Filter>
     </ClInclude>
-    <ClInclude Include="PatricleEmitter.h">
+    <ClInclude Include="ParicleEmitter.h">
       <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
