--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -135,30 +135,30 @@
     <ClCompile Include="engine\Tool\Camera.cpp">
       <Filter>engine\Tool</Filter>
     </ClCompile>
-    <ClCompile Include="ParticleManager.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="engine\base\SrvManager.cpp">
       <Filter>engine\base</Filter>
     </ClCompile>
     <ClCompile Include="engine\math\DrawFunction.cpp">
       <Filter>engine\math</Filter>
     </ClCompile>
-    <ClCompile Include="ParicleEmitter.cpp">
-      <Filter>ソース ファイル</Filter>
+    <ClCompile Include="engine\Tool\ParicleEmitter.cpp">
+      <Filter>engine\Tool</Filter>
+    </ClCompile>
+    <ClCompile Include="engine\Tool\ParticleManager.cpp">
+      <Filter>engine\Tool</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <FxCompile Include="resources\shaders\Object3d\Object3d.PS.hlsl">
+    <FxCompile Include="engine\Tool\resources\shaders\Object3d\Object3d.PS.hlsl">
       <Filter>シェーダー ファイル</Filter>
     </FxCompile>
-    <FxCompile Include="resources\shaders\Object3d\Object3d.VS.hlsl">
+    <FxCompile Include="engine\Tool\resources\shaders\Object3d\Object3d.VS.hlsl">
       <Filter>シェーダー ファイル</Filter>
     </FxCompile>
-    <FxCompile Include="resources\shaders\Particle\Particle.PS.hlsl">
+    <FxCompile Include="engine\Tool\resources\shaders\Particle\Particle.PS.hlsl">
       <Filter>シェーダー ファイル</Filter>
     </FxCompile>
-    <FxCompile Include="resources\shaders\Particle\Particle.VS.hlsl">
+    <FxCompile Include="engine\Tool\resources\shaders\Particle\Particle.VS.hlsl">
       <Filter>シェーダー ファイル</Filter>
     </FxCompile>
   </ItemGroup>
@@ -247,17 +247,17 @@
     <ClInclude Include="engine\Tool\Camera.h">
       <Filter>engine\Tool</Filter>
     </ClInclude>
-    <ClInclude Include="ParticleManager.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="engine\base\SrvManager.h">
       <Filter>engine\base</Filter>
     </ClInclude>
     <ClInclude Include="engine\math\DrawFunction.h">
       <Filter>engine\math</Filter>
     </ClInclude>
-    <ClInclude Include="ParicleEmitter.h">
-      <Filter>ヘッダー ファイル</Filter>
+    <ClInclude Include="engine\Tool\ParicleEmitter.h">
+      <Filter>engine\Tool</Filter>
+    </ClInclude>
+    <ClInclude Include="engine\Tool\ParticleManager.h">
+      <Filter>engine\Tool</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -266,10 +266,10 @@
     </Text>
   </ItemGroup>
   <ItemGroup>
-    <None Include="resources\shaders\Object3d\Object3d.hlsli">
+    <None Include="engine\Tool\resources\shaders\Object3d\Object3d.hlsli">
       <Filter>シェーダー ファイル</Filter>
     </None>
-    <None Include="resources\shaders\Particle\Particle.hlsli">
+    <None Include="engine\Tool\resources\shaders\Particle\Particle.hlsli">
       <Filter>シェーダー ファイル</Filter>
     </None>
   </ItemGroup>
