--- a/imgui.ini
+++ b/imgui.ini
@@ -9,7 +9,12 @@ Size=550,680
 Collapsed=0
 
 [Window][MaterialData]
-Pos=794,121
-Size=559,517
+Pos=760,176
+Size=559,502
+Collapsed=0
+
+[Window][Settings]
+Pos=211,425
+Size=377,54
 Collapsed=0
 
