サブプロジェクトの位置変更

--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -257,4 +257,7 @@
       <Filter>imgui</Filter>
     </Text>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="externals\imgui\imgui.vcxproj" />
+  </ItemGroup>
 </Project>
