--- a/project/CG2-25-LE2C23.vcxproj.filters
+++ b/project/CG2-25-LE2C23.vcxproj.filters
@@ -153,14 +153,17 @@
     <ClCompile Include="engine\Tool\ImGuiManager.cpp">
       <Filter>engine\Tool</Filter>
     </ClCompile>
-    <ClCompile Include="GameScene.cpp">
-      <Filter>ソース ファイル</Filter>
-    </ClCompile>
     <ClCompile Include="engine\GAME\Framework.cpp">
       <Filter>engine\GAME</Filter>
     </ClCompile>
     <ClCompile Include="engine\GAME\GameEngine.cpp">
       <Filter>engine\GAME</Filter>
+    </ClCompile>
+    <ClCompile Include="GameScene.cpp">
+      <Filter>engine\scene</Filter>
+    </ClCompile>
+    <ClCompile Include="TitleScene.cpp">
+      <Filter>ソース ファイル</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -277,14 +280,17 @@
     <ClInclude Include="engine\Tool\ImGuiManager.h">
       <Filter>engine\Tool</Filter>
     </ClInclude>
-    <ClInclude Include="GameScene.h">
-      <Filter>ヘッダー ファイル</Filter>
-    </ClInclude>
     <ClInclude Include="engine\GAME\GameEngine.h">
       <Filter>engine\GAME</Filter>
     </ClInclude>
     <ClInclude Include="engine\GAME\Framework.h">
       <Filter>engine\GAME</Filter>
+    </ClInclude>
+    <ClInclude Include="GameScene.h">
+      <Filter>engine\scene</Filter>
+    </ClInclude>
+    <ClInclude Include="TitleScene.h">
+      <Filter>ヘッダー ファイル</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
